[package]
name = "string-explode"
version = "0.1.0"
authors = ["Keating Reid <keating.reid@protonmail.com>"]
description = "A procedural macro that expands a string literal to an array of its characters."
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
