[package]
name = "string-explode"
version = "0.1.0"
authors = ["Keating Reid <keating.reid@protonmail.com>"]
description = "A procedural macro that expands a string literal to an array of its characters."
repository = "https://github.com/Keating950/string-explode"
license = "MIT"
keywords = ["proc-macro", "const", "str", "array"]
categories = ["text-processing", "encoding", "data-structures"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
